AM_CPPFLAGS= @NPM_CPPFLAGS@
AM_CFLAGS=   @NPM_CFLAGS@
AM_CXXFLAGS= @NPM_CXXFLAGS@
AM_LDFLAGS=  @NPM_LDFLAGS@

ACLOCAL_AMFLAGS= -I m4

SUBDIRS=               npm \
                       apps

SRCDIR=                @abs_top_srcdir@
BUILDDIR=              @abs_top_builddir@

EXTRA_DIST=            bootstrap-buildsystem.sh \
                       build-stage.sh
