CPPFLAGS= @NPM_CPPFLAGS@
CFLAGS=   @NPM_CFLAGS@
CXXFLAGS= @NPM_CXXFLAGS@
LDFLAGS=  @NPM_LDFLAGS@

noinst_LTLIBRARIES=   libcommon.la
libcommon_la_SOURCES= WorldCamera.cpp Globals.cpp CheatSheet.cpp \
                      GoalInstanceDrawing.cpp OdometryDrawing.cpp \
                      BBox.cpp WorldDrawing.cpp Manageable.cpp Sharp.cpp \
                      TrajectoryDrawing.cpp HoloDriveDrawing.cpp Object.cpp \
                      wrap_glu.cpp ScannerDrawing.cpp RobotZoomCamera.cpp \
                      RobotDrawing.cpp View.cpp StillCamera.cpp \
                      SimpleImage.cpp Sensor.cpp DiffDriveDrawing.cpp \
                      SharpDrawing.cpp Camera.cpp Drawing.cpp \
                      RobotServer.cpp RobotClient.cpp RobotDescriptor.cpp \
                      Lidar.cpp Manager.cpp World.cpp HAL.cpp Drive.cpp \
                      DiffDrive.cpp HoloDrive.cpp BicycleDrive.cpp util.cpp \
                      TraversabilityDrawing.cpp BicycleDriveDrawing.cpp \
                      Random.cpp MapperUpdateDrawing.cpp MapperRefDrawing.cpp \
                      NoiseModel.cpp
